# LAFARGE_GIRAULT_DESNOES_Projet_c

./: CMakeLists.txt  Partie_1.c  Partie_1.h  Partie_2.c  Partie_2.h  README.md  hasse.c  hasse.h  main.c  matrix.c  matrix.h  utils.c  utils.h
Data/: exemple1.txt  exemple10.txt  exemple1_chatGPT_fixed.txt  exemple1_from_chatGPT.txt  exemple2.txt  exemple3.txt  exemple4_2check.txt  exemple_hasse1.txt  exemple_scc1.txt  exemple_valid_step3.txt  matrice_projet.txt
